# DynaInsRemover

./: CMakeLists.txt  README.md  package.xml
config/: run_doals.yaml  run_kitti.yaml  run_kitti_gt.yaml
include/dyna_ins_remover/: common.hpp  extract_clusters.hpp  ins_belief_update copy.hpp  ins_belief_update.hpp  ins_grid_map.hpp  ins_occ_check.hpp  patchwork.hpp  patchworkpp.hpp  pub_grid_map.hpp  tgs.hpp  tictoc.hpp
launch/: run_doals.launch  run_kitti.launch  run_kitti_gt.launch
msg/: CloudInfo.msg
rviz/: run_doals.rviz  run_kitti.rviz  run_kitti_gt.rviz
scripts/: analysis_py3.py  head.txt  ins.pcd  tail.txt  vis_descriptors.py
src/: data_publisher.cpp  delete.txt  gt_publisher.cpp  static_mapping copy.cpp  static_mapping.cpp
